[incubator-kie-issues#1820] Fix review comments